style(utils): 格式化代码并移除多余空行